--- a/style/media.css
+++ b/style/media.css
@@ -1,5 +1,9 @@
 @media (max-width: 540px)
     {
+        .header-wrapper {
+            width: 100%;
+        }
+
         .nav {
             position: fixed;
             top: 80px;
@@ -17,23 +21,42 @@
             background-color: aqua;
         }
 
-        .nav:active {
-            position: fixed;
-            left: 300px;
-            z-index: 22;
-        }
+            .active {
+                position: fixed;
+                left: 300px;
+                z-index: 22;
+            }
         
         .burger-menu {
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
+            margin-left: 30px;
             margin-right: 30px;
             width: 36px;
             height: 36px;
             border: 2px solid #4c1700a4;
             border-radius: 10px;
             cursor: pointer;
+        }
+
+        .content-wrapper {
+            width: 100%;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+
+        }
+
+        .header-photo {
+            display: none;
+        }
+
+        .info-short {
+            justify-content: flex-start;
         }
 
     }    
