--- a/style/main-css.css
+++ b/style/main-css.css
@@ -1,4 +1,5 @@
 @import url('./fonts.css');
 @import url('./header.css');
 @import url('./main-section.css');
+@import url('./footer.css');
 @import url('./media.css');
